--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,12 @@
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="css/main.css">
 {% include head.html %}
+<style>
+div {
+  text-align: justify;
+  text-justify: inter-word;
+}
+</style>
 </head>
 <body>
   <div class="container">
