--- a/_sass/_biscuit.scss
+++ b/_sass/_biscuit.scss
@@ -114,7 +114,7 @@ blockquote {
   margin-right: 0;
   padding: .5rem 1rem;
   border-left: .25rem solid #ccc;
-  color: #666;
+  color: rgb(10, 10, 10);
 }
 
 blockquote p:last-child {
