--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@ div {
 }
 </style>
 </head>
-  <div class="container">
+  <div class="container",style="max-width: 1100px;">
     {{ content }}
   </div>
 {% include scripts.html %}
