--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,3 +3,9 @@
 <small> Este es el tema de Col-Contrata: <a href="https://hubertqui.github.io/col-contrata/">COL-CONTRATA</a></small>
 </center>
 </div>
+<script src="{{ "/assets/js/zepto.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/lunar.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/prism.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/database.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/search.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/mobile-navigation.js" | relative_url }}"></script>
