--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html>
-<body>
-    <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="css/main.css">
-{% include head.html %}
-<style>
-div {
-  text-align: justify;
-  text-justify: inter-word;
-}
-</style>
-</head>
-  <div class="container",style="max-width: 1100px;">
-    {{ content }}
-  </div>
-{% include scripts.html %}
-</body>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+	{% include head.html %}
+	<body>
+		<div class="wrapper">
+			{% include sidebar.html %}
+			<main class="content">
+				<div class="inner">
+					{{ content }}
+				</div>
+			</main>
+		</div>
+		{% include scripts.html %}
+	</body>
 </html>
